<resources>
    <string name="app_name">Principal</string>
    <string name="action_settings">Settings</string>
    <string name="app_cadastro">Cadastro de Usuario</string>
    <string name="lista_ende">Lista de Endereço</string>
    <string name="cad_endereco">Cadastro de Endereço</string>
    <string name="erro_campo_obrigatorio">Informe o campo \"%s\"</string>
    <string name="sobrenomee">Sobrenome</string>
    <string name="idade">Idade</string>
    <string name="cadastro_de_enderecos">Cadastro de Endereços</string>
    <string name="excluir">Excluir</string>
    <string name="salvar">Salvar</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Numero</string>
    <string name="codigo">Código</string>
    <string name="complemento">Complemento</string>
    <string name="pesquisar">Pesquisar...</string>
</resources>
