<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="textImeMultiLine"
            android:maxLength="20" />

        <EditText
            android:id="@+id/edtSobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sobrenome"
            android:inputType="textImeMultiLine"
            android:maxLength="15" />

        <EditText
            android:id="@+id/edtIdade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:hint="@string/idade"
            android:inputType="number"
            android:maxLength="3"
            tools:phoneNumber="false" />

        <Button
            android:id="@+id/btnEndereco"
            android:hint="@string/cadastro_de_enderecos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="bottom|end"/>

    </LinearLayout>

</ScrollView>