<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical"
    android:background="?android:attr/activatedBackgroundIndicator"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textEndereco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/endereco" />

        <TextView
            android:id="@+id/textCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codigo" />

    </LinearLayout>

    <TextView
        android:id="@+id/textNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:text="@string/numero"/>

    <TextView
        android:id="@+id/textComplemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:text="@string/complemento"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp" />
</LinearLayout>