<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background= "@color/colorTable"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/tvEndereco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/endereco"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tvNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero"
            android:textColor="@android:color/white" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvComplemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/complemento"
        android:textColor="@android:color/white" />


</LinearLayout>